Nvm this is final for Steam

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <nav id="navbar">
-        <div class="logo">YourLogo</div>
+        <div class="logo">Joonhyuk Yoon</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -23,8 +23,8 @@
     <section id="welcome">
         <div class="welcome-container">
             <img src="WelcomePF.JPG" alt="Joonhyuk Profile" class="welcome-img">
-            <h1>Hello, I'm [Your Name]</h1>
-            <p>Welcome to my portfolio! I'm a passionate developer who loves creating amazing web experiences.</p>
+            <h1>Hello, I'm Joonhyuk</h1>
+            <p>Welcome to my portfolio! I'm a passionate STEAM student who loves to code!!</p>
             <a href="projects.html"><button class="cta-btn">View My Work</button></a>
         </div>
     </section>
@@ -33,7 +33,7 @@
     <section id="about-me">
         <div class="about-me-container">
             <h2>About Me</h2>
-            <p>I am a web developer with a passion for creating functional and visually appealing websites.</p>
+            <p>I from South Korea currently living in Morocco. I am going to Rabat American school and taking STEAM class which is one on my favourite classes ever! My favourite music artist is Kanye West. I love making music, especially classical, and love playing the violin. However one of my true passions are in coding. I have started coding since when I was 11 years old. Starting for Scratch, the block coding program, I have made creative projects...</p>
             <a href="about.html"><button class="read-more-btn">Read More...</button></a>
         </div>
     </section>
@@ -42,35 +42,36 @@
     <section id="blog">
         <div class="blog-container">
             <h2>My Blog</h2>
+            
             <div class="blog-slider-wrapper">
                 
                 <div class="blog-slider">
                     <div class="blog-item">
-                        <img src="images/blog1.jpg" alt="Blog 1">
+                        <img src="Portfolio Photos/AMISHonorOrchestra2024.jpg" alt="Blog 1">
                         <div class="blog-text">
-                            <h3>Blog Post Title 1</h3>
-                            <p>Short description or excerpt from the blog post...</p>
+                            <h3>AMIS Honor Orchestra in London</h3>
+                            <p href="about.html">Feburary 2nd 2024 I was able to attend in the AMIS Honor Orchestra in London through an audition which took place...</p>
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="images/blog2.jpg" alt="Blog 2">
+                        <img src="Portfolio Photos/IMG_7709.jpg" alt="Blog 2">
                         <div class="blog-text">
-                            <h3>Blog Post Title 2</h3>
-                            <p>Short description or excerpt from the blog post...</p>
+                            <h3>Ice Skating in Vienna</h3>
+                            <p>Ice skating in Vienna is really fun. Especially looking at the beautiful city hall square there are a lot...</p>
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="images/blog3.jpg" alt="Blog 3">
+                        <img src="Portfolio Photos/IMG_0262.jpg" alt="Blog 3">
                         <div class="blog-text">
-                            <h3>Blog Post Title 3</h3>
-                            <p>Short description or excerpt from the blog post...</p>
+                            <h3>My Cat</h3>
+                            <p>Moving into Morocco, there was a cat straying around the garden. Of course we did not let him in however..</p>
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="images/blog4.jpg" alt="Blog 4">
+                        <img src="Portfolio Photos/inkscape-logo.webp" alt="Blog 4">
                         <div class="blog-text">
-                            <h3>Blog Post Title 4</h3>
-                            <p>Short description or excerpt from the blog post...</p>
+                            <h3>Inkscape</h3>
+                            <p>I did a project in inkscape during STEAM class. We first outlined a structure and filled in colors...</p>
                         </div>
                     </div>
                 </div>
