--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Navbar -->
     <nav id="navbar">
-        <div class="logo">YourLogo</div>
+        <div class="logo">Joonhyuk Yoon</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
