NVM this is the real steam final

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Welcome Section (Main Home Page Content) -->
     <section id="welcome">
         <div class="welcome-container">
-            <img src="WelcomePF.JPG" alt="Joonhyuk Profile" class="welcome-img">
+            <img src="Portfolio Photos/WelcomePF.JPG" alt="Joonhyuk Profile" class="welcome-img">
             <h1>Hello, I'm Joonhyuk</h1>
             <p>Welcome to my portfolio! I'm a passionate STEAM student who loves to code!!</p>
             <a href="projects.html"><button class="cta-btn">View My Work</button></a>
