From steam 13th nov 2024

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home - Your Name Portfolio</title>
+    <title>Home - Joonhyuk</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -21,10 +21,11 @@
 
     <!-- Welcome Section (Main Home Page Content) -->
     <section id="welcome">
+
+            <img src="Portfolio Photos/WelcomePF3.JPG" alt="Joonhyuk Profile" class="welcome-img">
         <div class="welcome-container">
-            <img src="Portfolio Photos/WelcomePF.JPG" alt="Joonhyuk Profile" class="welcome-img">
-            <h1>Hello, I'm Joonhyuk</h1>
-            <p>Welcome to my portfolio! I'm a passionate STEAM student who loves to code!!</p>
+            <h1>Hello, my name is Joonhyuk</h1>
+            <p>Welcome to my portfolio. I am from </p>
             <a href="projects.html"><button class="cta-btn">View My Work</button></a>
         </div>
     </section>
